fix the big title on iphone  📲

--- a/src/style.css
+++ b/src/style.css
@@ -269,9 +269,7 @@ footer p:nth-child(1){
     width: 600px;
     text-align: center;
 }
-footer p:nth-child(3){
-    font-size: 1vw;
-}
+
 .social-icons a{
     width: 40px;
     height: 40px;
@@ -541,7 +539,17 @@ footer p:nth-child(3){
         width: 150px;
         height: 33px;
     }
+    footer p:nth-child(1){
+        font-size: 10px;
+    }
     footer p:nth-child(2){
         width: 90%;
     }
+
+    p.copyright{
+        font-size: 12px;
+    }
+
+    
 }
+
